--- a/src/index1.html
+++ b/src/index1.html
@@ -1011,8 +1011,75 @@
     <!-- footer 底部区 -->
     <div class="footer ">
         <div class="footer-content ">
-            <div class="footer-t "></div>
-            <div class="footer-b "></div>
+            <div class="footer-t clear">
+                <div class="footer-t-t1">
+                    <h2>关于商城</h2>
+                    <p class="footer-t-t1-p1">
+                        360商城是奇虎360公司的官方电商平台，主要经营360安全智能设备，以及相关领域消费品。提供最新的360智能设备，最贴心的售后服务，360社区一手评测资讯，享受360安全、安心、放心的购物体验。
+                    </p>
+                    <p class="footer-t-t1-p2 clear">
+                        <span class="footer-t-t1-s1">关于我们</span>
+                        <span class="footer-t-t1-s2"></span>
+                        <span class="footer-t-t1-s3"></span>
+                    </p>
+                </div>
+                <div class="footer-t-t2 ">
+                    <h2>售后服务</h2>
+                    <a href="#">7日无理由退货 </a>
+                    <a href="#">质量问题15日内换货 </a>
+                    <a href="#">保修条款 </a>
+                    <a href="#">服务流程 </a>
+                    <a href="#">许可协议 </p>
+                    <a href="#">隐私政策 </a>
+                </div>
+                <div class="footer-t-t3">
+                    <h2>帮助中心</h2>
+                    <a href="#">用户注册  </a>
+                    <a href="#">会员说明  </a>
+                    <a href="#">登录与密码找回  </a>
+                    <a href="#">购买指南  </a>
+                    <a href="#">支付方式  </p>
+                    <a href="#">配送与说明  </a>
+                </div>
+                <div class="footer-t-t4">
+                    <h2>
+                        扫码下载APP
+                    </h2>
+                    <a href="">
+                        <img src="https://p4.ssl.qhimg.com/t01912e4fcc88786eca.png" alt="">
+                    </a>
+                </div>
+                <div class="footer-t-t5">
+                    <h2>联系我们</h2>
+                    <p class="footer-t-t5-p1">400-1555-360</p>
+                    <p class="footer-t-t5-p2">周一至周日 9:00-21:00（仅收市话费）</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="footer-content2">
+            <div class="footer-b ">
+                <div class="footer-b-top">
+                    <a href="">
+                        <span class="iconfont icon-leimupinleifenleileibie"></span>7天无理由退货
+                    </a>
+                    <a href="">
+                        <span class="iconfont icon-luyouqi"></span>15天免费换货
+                    </a>
+                    <a href="">
+                        <span class="iconfont icon-baobao"></span> 满99元包邮
+
+                    </a>
+                </div>
+                <div class="footer-b-bom">
+                    <p> ©2019-2020 mall.360.cn版权所有 </p>
+                    <p> 京ICP备08010314号-43 &nbsp;营业执照 &nbsp; 京公网安备11000002000006号 </p>
+                    <p>公司名称：北京视觉世界科技有限公司 | 社会统一信用代码：91110105336460203N&nbsp;|&nbsp;食品经营许可证 </p>
+                    <p> 公司地址：北京市朝阳区酒仙桥路6号院2号楼1至17层102号内5层501 | 联系方式：400-1555-360 </p>
+
+                </div>
+            </div>
+
         </div>
 
     </div>
