轮播图完事

--- a/src/index1.html
+++ b/src/index1.html
@@ -15,13 +15,14 @@
 <body>
     <!-- 顶部区域 -->
     <div class="top">
+
         <div class="top-pic">
             <div class="top-img">
                 <img src="https://p5.ssl.qhimg.com/t01f99ab0cec66220d9.webp" alt="">
                 <div class="inner-btn">x</div>
             </div>
         </div>
-        <div class="top-nav">
+        <div class="top-nav clear">
             <div class="top-nav-list">
                 <a href="/help" class="text-lnk" data-monitor="public_top_nav_help">帮助中心 </a>
                 <a href="javascript:;" class="text-lnk jsCollectPage" data-monitor="public_top_nav_collect">收藏 </a>
@@ -30,8 +31,8 @@
             </div>
             <div class="top-user-box">
                 <div class="user-box">
-                    <a href="#" class="login">登录</a>
-                    <a href="#" class="registered">注册</a>
+                    <a href="login.html" class="login">登录</a>
+                    <a href="registry.html" class="registered">注册</a>
                     <a href="#">360手机商城</a>
                     <span class="iconfont icon-baobao"></span>
                 </div>
@@ -42,6 +43,20 @@
 
     <!-- 头部区 -->
     <div class="header" style="height: 100px;">
+        <!-- 楼梯图 -->
+        <div class="index-elecator-box">
+            <a href="javascript:;">热门活动</a>
+            <a href="javascript:;">限时抢购</a>
+            <a href="javascript:;">爆款推荐</a>
+            <a href="javascript:;">家庭安防</a>
+            <a href="javascript:;">安全路由</a>
+            <a href="javascript:;">行车安全</a>
+            <a href="javascript:;">扫地机器人</a>
+            <a href="javascript:;">智能守护</a>
+            <a href="javascript:;">生态互联</a>
+            <a href="javascript:;">发现好货</a>
+            <a href="javascript:;">更多商品</a>
+        </div>
         <div class="header-content clear">
             <a class="header-logo-left">
                 <img src="https://p.ssl.qhimg.com/t0102789b8d00c3dfce.png" alt="">
@@ -57,12 +72,12 @@
 
                 </div>
                 <div class="search-b">
-                    <a href="https://mall.360.cn/search/?q=路由器&amp;track=PCSS01" class="suggest-item" data-monitor="search_hot_words" data-monitor-params="0" data-monitor-resource="">路由器</a>
-                    <a href="https://mall.360.cn/search/?q=摄像机&amp;track=PCSS02" class="suggest-item" data-monitor="search_hot_words" data-monitor-params="1" data-monitor-resource="">摄像机</a>
-                    <a href="https://mall.360.cn/search/?q=记录仪&amp;track=PCSS03" class="suggest-item" data-monitor="search_hot_words" data-monitor-params="2" data-monitor-resource="">记录仪</a>
-                    <a href="https://mall.360.cn/search/?q=儿童手表&amp;cate=104168&amp;brand=B00044,B00617&amp;track=PCSS04" class="suggest-item" data-monitor="search_hot_words" data-monitor-params="3" data-monitor-resource="">儿童手表</a>
-                    <a href="https://mall.360.cn/search/?q=%E8%80%B3%E6%9C%BA&amp;stock=1&amp;track=PCSS05" class="suggest-item" data-monitor="search_hot_words" data-monitor-params="4" data-monitor-resource="">耳机</a>
-                    <a href="https://mall.360.cn/search/?q=扫地机&amp;track=PCSS06" class="suggest-item" data-monitor="search_hot_words" data-monitor-params="5" data-monitor-resource="">扫地机</a>
+                    <a href="">路由器</a>
+                    <a href="">摄像机</a>
+                    <a href="">记录仪</a>
+                    <a href="">儿童手表</a>
+                    <a href="">耳机</a>
+                    <a href="">扫地机</a>
                 </div>
 
             </div>
@@ -1008,6 +1023,8 @@
 
 
 
+
+
     <!-- footer 底部区 -->
     <div class="footer ">
         <div class="footer-content ">
@@ -1086,3 +1103,5 @@
 </body>
 
 </html>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="script/index.js"></script>
