写完了首页渲染

--- a/src/index1.html
+++ b/src/index1.html
@@ -91,62 +91,62 @@
                         <a href="#">
                             <span class="iconfont icon-luyouqi"></span> 智能设备
                         </a>
-                        <div class="header-ul-box">
-                            <a href="">点击跳转</a>
-                        </div>
-
                     </li>
                     <li>
                         <a href="#">
                             <span class="iconfont icon-cha"></span> 智能设备</a>
-                        <div class="header-ul-box">
-                            <a href="">点击跳转</a>
-                        </div>
                     </li>
                     <li>
                         <a href="#">
                             <span class="iconfont icon-luyouqi"></span> 智能设备</a>
-                        <div class="header-ul-box">
-                            <a href="">点击跳转</a>
-                        </div>
                     </li>
                     <li>
                         <a href="#">
                             <span class="iconfont icon-cha"></span> 智能设备</a>
-                        <div class="header-ul-box">
-                            <a href="">点击跳转</a>
-                        </div>
                     </li>
                     <li>
                         <a href="#">
                             <span class="iconfont icon-luyouqi"></span> 智能设备</a>
-                        <div class="header-ul-box">
-                            <a href="">点击跳转</a>
-                        </div>
                     </li>
                     <li>
                         <a href="#">
                             <span class="iconfont icon-luyouqi"></span> 智能设备</a>
-                        <div class="header-ul-box">
-                            <a href="">点击跳转</a>
-                        </div>
                     </li>
                     <li>
                         <a href="#">
                             <span class="iconfont icon-luyouqi"></span> 智能设备</a>
-                        <div class="header-ul-box">
-                            <a href="">点击跳转</a>
-                        </div>
                     </li>
                     <li>
                         <a href="#">
                             <span class="iconfont icon-luyouqi"></span> 智能设备</a>
-                        <div class="header-ul-box">
-                            <a href="">点击跳转</a>
-                        </div>
                     </li>
-
                 </ul>
+                <div class="header-ul-box">
+                    <div class="item">
+                        <a href="">点击跳转1</a>
+                    </div>
+                    <div class="item">
+                        <a href="">点击跳转2</a>
+                    </div>
+                    <div class="item">
+                        <a href="">点击跳转3</a>
+                    </div>
+                    <div class="item">
+                        <a href="">点击跳转4</a>
+                    </div>
+                    <div class="item">
+                        <a href="">点击跳转5</a>
+                    </div>
+                    <div class="item">
+                        <a href="">点击跳转6</a>
+                    </div>
+                    <div class="item">
+                        <a href="">点击跳转7</a>
+                    </div>
+                    <div class="item">
+                        <a href="">点击跳转8</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -197,7 +197,7 @@
         <!-- main版心 -->
         <div class="main-content">
             <!-- 热门活动 -->
-            <div class="main-cnt-activity">
+            <div class="main-cnt-activity a1">
                 <h2>热门活动</h2>
                 <div class="main-activity-box">
                     <div class="activity-box-pic">
@@ -219,7 +219,7 @@
 
             </div>
             <!-- 限时购 -->
-            <div class="main-cnt-time clear">
+            <div class="main-cnt-time clear a1">
                 <div class="main-t-b" style="height: 35px;">
                     <span class="cnt-time-pic">
                 </span>
@@ -361,7 +361,7 @@
             </div>
 
             <!-- 爆款推荐 -->
-            <div class="main-cnt-hot">
+            <div class="main-cnt-hot a1">
                 <h2>爆款推荐</h2>
                 <div class="main-hot-box clear">
                     <p class="main-hot-box1">
@@ -385,7 +385,7 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security1">
+            <div class="main-m-security1 b1">
                 <div class="main-m-security-box">
                     <span class="main-m-security-span1">家庭安防</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
@@ -460,7 +460,7 @@
                 </div>
             </div>
             <!-- 路由安全 -->
-            <div class="main-m-security2 ">
+            <div class="main-m-security2 b1 ">
                 <div class="main-m-security-box">
                     <span class="main-m-security-span1">家庭安防</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
@@ -535,7 +535,7 @@
                 </div>
             </div>
             <!-- 行车安全 -->
-            <div class="main-m-security3 ">
+            <div class="main-m-security3 b1">
                 <div class="main-m-security-box">
                     <span class="main-m-security-span1">家庭安防</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
@@ -610,7 +610,7 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security4 ">
+            <div class="main-m-security4 b1">
                 <div class="main-m-security-box">
                     <span class="main-m-security-span1">家庭安防</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
@@ -685,7 +685,7 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security5 ">
+            <div class="main-m-security5 b1">
                 <div class="main-m-security-box">
                     <span class="main-m-security-span1">家庭安防</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
@@ -760,7 +760,7 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security6 ">
+            <div class="main-m-security6 b1">
                 <div class="main-m-security-box">
                     <span class="main-m-security-span1">家庭安防</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
@@ -835,7 +835,7 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security7 ">
+            <div class="main-m-security7 b1">
                 <div class="main-m-security-box">
                     <span class="main-m-security-span1">家庭安防</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
@@ -909,7 +909,7 @@
                     <img src="https://p0.ssl.qhimg.com/t01bcd4e5e4e96a449b.webp" alt="">
                 </div>
             </div>
-            <div class="main-b-list ">
+            <div class="main-b-list b1">
                 <div class="main-b-list-top">
                     更多商品
                 </div>
@@ -1104,4 +1104,5 @@
 
 </html>
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
 <script src="script/index.js"></script>
