首页加了一些hover效果

--- a/src/index1.html
+++ b/src/index1.html
@@ -24,17 +24,31 @@
         </div>
         <div class="top-nav clear">
             <div class="top-nav-list">
-                <a href="/help" class="text-lnk" data-monitor="public_top_nav_help">帮助中心 </a>
-                <a href="javascript:;" class="text-lnk jsCollectPage" data-monitor="public_top_nav_collect">收藏 </a>
-                <a href="https://www.360.cn/" class="text-lnk" data-monitor="public_top_www">360官网 </a>
-                <a href="https://life.360.cn/" class="text-lnk" data-monitor="public_top_iot">360智慧生活 </a>
+                <a href="javascript:;">帮助中心 </a>
+                <a href="javascript:;">收藏 </a>
+                <a href="javascript:;">360官网 </a>
+                <a href="javascript:;">360智慧生活 </a>
             </div>
             <div class="top-user-box">
                 <div class="user-box">
                     <a href="login.html" class="login">登录</a>
                     <a href="registry.html" class="registered">注册</a>
-                    <a href="#">360手机商城</a>
-                    <span class="iconfont icon-baobao"></span>
+                    <a class="user-box-1" href="#">360手机商城
+                        <div class="user-box-none clear">
+                            <div class="user-box-none1">
+                                <img src="https://p4.ssl.qhimg.com/t01912e4fcc88786eca.png" alt="">
+                            </div>
+                            <div class="user-box-none2">
+                                <p>360手机商城 </p>
+                                <p>扫码下载</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="user-box-2" href="#"><span class="iconfont icon-baobao"></span>
+                    <div class="user-box-2-none">
+      您的购物车还没有商品，赶紧去选购吧！
+                    </div></a>
+
                 </div>
             </div>
         </div>
@@ -56,6 +70,20 @@
             <a href="javascript:;">生态互联</a>
             <a href="javascript:;">发现好货</a>
             <a href="javascript:;">更多商品</a>
+        </div>
+        <!-- 浏览器右侧盒子 -->
+        <div class="index-right">
+            <div class="index-right-top">
+                <a href="#"><span class="iconfont icon-luyouqi"></span></a>
+                <a href="#"><span class="iconfont icon-baobao"></span></a>
+                <a href="#"><span class="iconfont icon-luyouqi"></span></a>
+            </div>
+            <div class="index-right-mid">
+                <span class="iconfont icon-baobao"></span>
+            </div>
+            <div class="index-right-bottom">
+                <span class="iconfont icon-leimupinleifenleileibie"></span>
+            </div>
         </div>
         <div class="header-content clear">
             <a class="header-logo-left">
@@ -94,31 +122,37 @@
                     </li>
                     <li>
                         <a href="#">
-                            <span class="iconfont icon-cha"></span> 智能设备</a>
+                            <span class="iconfont icon-cha"></span> 食品/酒水/茗茶</a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="iconfont icon-luyouqi"></span> 智能设备</a>
+                            <span class="iconfont icon-luyouqi"></span> 手机/数码/电脑办公
+                        </a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="iconfont icon-cha"></span> 智能设备</a>
+                            <span class="iconfont icon-cha"></span> 家用电器
+
+                        </a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="iconfont icon-luyouqi"></span> 智能设备</a>
+                            <span class="iconfont icon-luyouqi"></span> 汽车用品
+                        </a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="iconfont icon-luyouqi"></span> 智能设备</a>
+                            <span class="iconfont icon-luyouqi"></span> 家居/家纺
+                        </a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="iconfont icon-luyouqi"></span> 智能设备</a>
+                            <span class="iconfont icon-luyouqi"></span> 个护清洁
+                        </a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="iconfont icon-luyouqi"></span> 智能设备</a>
+                            <span class="iconfont icon-luyouqi"></span> 玩具</a>
                     </li>
                 </ul>
                 <div class="header-ul-box">
