写完了楼层效果

--- a/src/list.html
+++ b/src/list.html
@@ -33,7 +33,9 @@
             </div>
         </div>
     </div>
-
+    <main>
+        12
+    </main>
 
     <!-- 头部区 -->
     <div class="header" style="height: 100px;">
@@ -266,3 +268,6 @@
 </body>
 
 </html>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
+<script src="script/list.js"></script>
