--- a/src/index1.html
+++ b/src/index1.html
@@ -57,7 +57,7 @@
 
     <!-- 头部区 -->
     <div class="header" style="height: 100px;">
-        <!-- 楼梯图 -->
+        <!-- 楼梯层 -->
         <div class="index-elecator-box">
             <a href="javascript:;">热门活动</a>
             <a href="javascript:;">限时抢购</a>
@@ -82,11 +82,14 @@
                 <span class="iconfont icon-baobao"></span>
             </div>
             <div class="index-right-bottom">
-                <span class="iconfont icon-leimupinleifenleileibie"></span>
+                <a href="#"> <span class="iconfont icon-leimupinleifenleileibie"></span></a>
+                <!-- 点击回到顶部 -->
+
             </div>
         </div>
         <div class="header-content clear">
             <a class="header-logo-left">
+
                 <img src="https://p.ssl.qhimg.com/t0102789b8d00c3dfce.png" alt="">
             </a>
             <div class="header-box-left">
@@ -157,7 +160,7 @@
                 </ul>
                 <div class="header-ul-box">
                     <div class="item">
-                        <a href="">点击跳转1</a>
+                        <a href="list.html">点击跳转1</a>
                     </div>
                     <div class="item">
                         <a href="">点击跳转2</a>
@@ -187,44 +190,49 @@
 
 
     <!-- banner广告 -->
-    <div class="banner">
-        <ul class="banner-box clear">
-            <li class="banner-box-pic">
-                <img src="https://p0.ssl.qhimg.com/t0132b13f7748bc9b1b.webp" alt="">
-            </li>
-            <li class="banner-box-pic">
-                <img src="https://p0.ssl.qhimg.com/t019139b6f41f8cdd3a.webp" alt="">
-            </li>
-            <li class="banner-box-pic">
-                <img src="https://p1.ssl.qhimg.com/t01b1639cbb2fc12dee.webp" alt="">
-            </li>
-            <li class="banner-box-pic">
-                <img src="https://p0.ssl.qhimg.com/t01a8771b2c4d02e20b.webp" alt="">
-            </li>
-            <li class="banner-box-pic">
-                <img src="https://p0.ssl.qhimg.com/t016f2d966406aedc0f.webp" alt="">
-            </li>
-            <li class="banner-box-pic">
-                <img src="https://p0.ssl.qhimg.com/t0188b8ed698ef90070.webp" alt="">
-            </li>
-            <li class="banner-box-pic">
-                <img src="https://p0.ssl.qhimg.com/t0132b13f7748bc9b1b.webp" alt="">
-            </li>
+    <div class="banner-a">
+        <div class="banner">
+            <ul class="banner-box clear">
+                <li class="banner-box-pic">
+                    <img src="https://p0.ssl.qhimg.com/t0132b13f7748bc9b1b.webp" alt="">
+                </li>
+                <li class="banner-box-pic">
+                    <img src="https://p0.ssl.qhimg.com/t019139b6f41f8cdd3a.webp" alt="">
+                </li>
+                <li class="banner-box-pic">
+                    <img src="https://p1.ssl.qhimg.com/t01b1639cbb2fc12dee.webp" alt="">
+                </li>
+                <li class="banner-box-pic">
+                    <img src="https://p0.ssl.qhimg.com/t01a8771b2c4d02e20b.webp" alt="">
+                </li>
+                <li class="banner-box-pic">
+                    <img src="https://p0.ssl.qhimg.com/t016f2d966406aedc0f.webp" alt="">
+                </li>
+                <li class="banner-box-pic">
+                    <img src="https://p0.ssl.qhimg.com/t0188b8ed698ef90070.webp" alt="">
+                </li>
+                <li class="banner-box-pic">
+                    <img src="https://p0.ssl.qhimg.com/t0132b13f7748bc9b1b.webp" alt="">
+                </li>
 
 
 
-        </ul>
-        <ol>
-            <li class="active"></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            </ul>
 
-        </ol>
-        <a class="banner-lbtn" href="javascript:;">&lt;</a>
-        <a class="banner-rbtn" href="javascript:;">&gt;</a>
+
+            <ol>
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+
+            </ol>
+            <a class="banner-lbtn" href="javascript:;">&lt;</a>
+            <a class="banner-rbtn" href="javascript:;">&gt;</a>
+        </div>
     </div>
+
 
     <!-- main内容区 -->
     <div class="main">
@@ -419,7 +427,7 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security1 b1">
+            <div class="main-m-security1 a1">
                 <div class="main-m-security-box">
                     <span class="main-m-security-span1">家庭安防</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
@@ -494,9 +502,9 @@
                 </div>
             </div>
             <!-- 路由安全 -->
-            <div class="main-m-security2 b1 ">
+            <div class="main-m-security2 a1 ">
                 <div class="main-m-security-box">
-                    <span class="main-m-security-span1">家庭安防</span>
+                    <span class="main-m-security-span1">安全路由</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
                 </div>
                 <div class="main-m-security-box1">
@@ -569,9 +577,9 @@
                 </div>
             </div>
             <!-- 行车安全 -->
-            <div class="main-m-security3 b1">
+            <div class="main-m-security3 a1">
                 <div class="main-m-security-box">
-                    <span class="main-m-security-span1">家庭安防</span>
+                    <span class="main-m-security-span1">行车安全</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
                 </div>
                 <div class="main-m-security-box1">
@@ -644,9 +652,9 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security4 b1">
+            <div class="main-m-security4 a1">
                 <div class="main-m-security-box">
-                    <span class="main-m-security-span1">家庭安防</span>
+                    <span class="main-m-security-span1">扫地机器人</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
                 </div>
                 <div class="main-m-security-box1">
@@ -719,9 +727,9 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security5 b1">
+            <div class="main-m-security5 a1">
                 <div class="main-m-security-box">
-                    <span class="main-m-security-span1">家庭安防</span>
+                    <span class="main-m-security-span1">智能守护</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
                 </div>
                 <div class="main-m-security-box1">
@@ -794,9 +802,9 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security6 b1">
+            <div class="main-m-security6 a1">
                 <div class="main-m-security-box">
-                    <span class="main-m-security-span1">家庭安防</span>
+                    <span class="main-m-security-span1">生态互联</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
                 </div>
                 <div class="main-m-security-box1">
@@ -869,9 +877,9 @@
                 </div>
             </div>
             <!-- 家庭安防 -->
-            <div class="main-m-security7 b1">
+            <div class="main-m-security7 a1">
                 <div class="main-m-security-box">
-                    <span class="main-m-security-span1">家庭安防</span>
+                    <span class="main-m-security-span1">发现好货</span>
                     <span class="main-m-security-span2">全部&gt;&gt;</span>
                 </div>
                 <div class="main-m-security-box1">
@@ -943,12 +951,12 @@
                     <img src="https://p0.ssl.qhimg.com/t01bcd4e5e4e96a449b.webp" alt="">
                 </div>
             </div>
-            <div class="main-b-list b1">
+            <div class="main-b-list a1">
                 <div class="main-b-list-top">
                     更多商品
                 </div>
                 <ul class="main-b-list-ul clear">
-                    <a href="">
+                    <!-- <a href="">
                         <li>
                             <img src="https://p3.ssl.qhimg.com/dr/400_400_80/t0159b11c88974f62f6.webp" alt="">
                             <p>360 智能摄像机小水滴AI版 D903</p>
@@ -1045,7 +1053,7 @@
                         </li>
                     </a>
 
-
+ -->
 
 
                 </ul>
