--- a/src/registry.html
+++ b/src/registry.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>360商城</title>
+    <title>360商城注册</title>
     <!-- <link rel="stylesheet" href="style/index.css"> -->
     <link rel="stylesheet" href="fonts/iconfont.css">
     <link rel="stylesheet" href="style/registry.css">
@@ -65,22 +65,33 @@
     </div>
 
 
-    <!-- banner广告 -->
-
 
     <!-- main内容区 -->
     <div class="main">
         <!-- main版心 -->
         <div class="main-content">
+            <div class="main-box">
+                <div class="main-box-title">用户账号注册</div>
+                <div class="main-box-form">
+                    <form action="" method="post">
+                        <div class="main-form-input">
+                            <input type="text" name="username" placeholder="请输入用户名">
+                        </div>
+                        <div class="main-porm-span">1</div>
 
-            <div class="main-b-list ">
-                <!-- 排序的按钮 -->
-                <div class="main-b-list-top">
+                        <div class="main-form-input">
+                            <input type="password" name="password" placeholder="请输入密码">
+                        </div>
+                        <div class="main-porm-span">2</div>
+                        <div class="main-porm-input">
+                            <input class="main-porm-submit" type="submit" value="点击注册">
+                        </div>
+
+                    </form>
                 </div>
             </div>
-            <div class="main-b-box ">已经到底咯</div>
-
         </div>
+
     </div>
 
 
