--- a/src/login.html
+++ b/src/login.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>360商城</title>
+    <title>360用户登录</title>
     <!-- <link rel="stylesheet" href="style/index.css"> -->
     <link rel="stylesheet" href="fonts/iconfont.css">
     <link rel="stylesheet" href="style/login.css">
+    <script src="https://cdn.bootcdn.net/ajax/libs/require.js/2.3.6/require.min.js" defer async=true data-main="script/main.js" id="currentpage" data-origin="login_module"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name=Keywords content="360商城,360商城,智能硬件,iot,360会员,商城,购物,红包,360,助手,优惠券,导购,直营,官方直营,电商,京东,360摄像机,360家庭防火墙,360手机助手,360浏览器,360金融,360手机卫士,路由器,360分期,行车助手,360音箱,360mall,mall360,360集团,360商城首页,360手机,奇酷手机,qikoo N7,奇酷N7,360手机官网,360购物官网,360商店,360拼拼,360会员,360用户,360官方商城,360官方商城官网,360旗舰店,360iot,360硬件,360智能,360智能硬件,360自营,360硬件自营,360会员优惠,360优惠券,360满减返,360安全,360家庭守护,360安全防护,360智能家,360防盗,360全方位">
     <meta name=Description content="360商城是奇虎360公司的官方电商平台，主要经营360安全智能设备，以及相关领域消费品。提供最新的360智能设备，最贴心的售后服务，360社区一手评测资讯，享受360安全、安心、放心的购物体验。">
@@ -65,22 +66,37 @@
     </div>
 
 
-    <!-- banner广告 -->
 
 
     <!-- main内容区 -->
     <div class="main">
         <!-- main版心 -->
         <div class="main-content">
+            <div class="main-box">
+                <div class="main-box-title">360账号登录</div>
+                <div class="main-box-form">
+                    <form action="" method="post">
+                        <div class="main-form-input">
+                            <input type="text" name="username" placeholder="请输入用户名">
+                        </div>
+                        <div class="main-form-span">1</div>
 
-            <div class="main-b-list ">
-                <!-- 排序的按钮 -->
-                <div class="main-b-list-top">
+                        <div class="main-form-input">
+                            <input type="password" name="password" placeholder="请输入密码">
+                        </div>
+                        <div class="main-form-span">2</div>
+                        <div class="main-form-input">
+                            <input class="main-form-submit" type="submit" value="登录">
+                        </div>
+                        <div class="main-form-a"> <a class="main-form-a1" href="registry.html">快速注册</a>
+                            <a class="main-form-a2" href="">找回密码</a></div>
+
+
+                    </form>
                 </div>
             </div>
-            <div class="main-b-box ">已经到底咯</div>
-
         </div>
+
     </div>
 
 
