--- a/src/cart.html
+++ b/src/cart.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>360商城</title>
+    <title>360购物车</title>
     <!-- <link rel="stylesheet" href="style/index.css"> -->
     <link rel="stylesheet" href="fonts/iconfont.css">
     <link rel="stylesheet" href="style/cart.css">
+    <script src="https://cdn.bootcdn.net/ajax/libs/require.js/2.3.6/require.min.js" defer async=true data-main="script/main.js" id="currentpage" data-origin="cart_module"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name=Keywords content="360商城,360商城,智能硬件,iot,360会员,商城,购物,红包,360,助手,优惠券,导购,直营,官方直营,电商,京东,360摄像机,360家庭防火墙,360手机助手,360浏览器,360金融,360手机卫士,路由器,360分期,行车助手,360音箱,360mall,mall360,360集团,360商城首页,360手机,奇酷手机,qikoo N7,奇酷N7,360手机官网,360购物官网,360商店,360拼拼,360会员,360用户,360官方商城,360官方商城官网,360旗舰店,360iot,360硬件,360智能,360智能硬件,360自营,360硬件自营,360会员优惠,360优惠券,360满减返,360安全,360家庭守护,360安全防护,360智能家,360防盗,360全方位">
     <meta name=Description content="360商城是奇虎360公司的官方电商平台，主要经营360安全智能设备，以及相关领域消费品。提供最新的360智能设备，最贴心的售后服务，360社区一手评测资讯，享受360安全、安心、放心的购物体验。">
@@ -73,12 +74,124 @@
         <!-- main版心 -->
         <div class="main-content">
 
-            <div class="main-b-list ">
-                <!-- 排序的按钮 -->
-                <div class="main-b-list-top">
+            <!--main-->
+            <div id="container" class="cart">
+                <div class="w">
+                    <!--全部商品哪一行-->
+                    <div class="cart-top" style="display: block;">
+                        <div class="cart-top-left">
+                            <a href=""><em>全部商品</em></a>
+                            <a href="list.html"><em>返回商品列表</em></a>
+                        </div>
+                        <div class="footline">
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <!--包裹购物车-->
+                    <div class="cart-wrap" style="display: block;">
+                        <div class="w">
+                            <div id="jd-cart">
+                                <div class="cartmain">
+                                    <div class="cart-thead">
+                                        <div class="cart-col t-checkbox">
+                                            <div class="cart-checkbox">
+                                                <input type="checkbox" checked="" name="" id="" class="allsel" value="" /> 全选
+                                            </div>
+                                        </div>
+                                        <div class="cart-col t-goods">商品</div>
+                                        <div class="cart-col t-props"></div>
+                                        <div class="cart-col t-prices">单价(元)</div>
+                                        <div class="cart-col t-quantity">数量</div>
+                                        <div class="cart-col t-sum">小计(元)</div>
+                                        <div class="cart-col t-action">操作</div>
+                                    </div>
+                                    <div id="cart-list">
+                                        <div class="cart-item-list">
+                                            <div class="cart-tbody">
+                                                <!-- 显示购物车列表 -->
+                                                <div class="item-list">
+                                                    <div class="goods-item goods-item-sele" style="display: none;">
+                                                        <div class="goods-info">
+                                                            <div class="cell b-checkbox">
+                                                                <div class="cart-checkbox">
+                                                                    <input type="checkbox" checked="" name="" id="" value="" />
+                                                                    <span class="line-circle"></span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="cell b-goods">
+                                                                <div class="goods-name">
+                                                                    <div class="goods-pic">
+                                                                        <a href=""><img src="" alt="" /></a>
+                                                                    </div>
+                                                                    <div class="goods-msg">
+                                                                        <div class="goods-d-info">
+                                                                            <a href="">Apple iMac 27英寸一体机（Core i5
+                                                                    处理器/8GB内存/1TB存储/2GB独显/Retina 5K屏 MK462CH/A）</a>
+                                                                        </div>
+
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="cell b-props">
+                                                                <div class="prop-text"></div>
+                                                            </div>
+                                                            <div class="cell b-price">
+                                                                <strong>13488.00</strong>
+                                                                <div class="sales-promotion-dropdown">
+                                                                </div>
+                                                            </div>
+                                                            <div class="cell b-quantity">
+                                                                <div class="quantity-form">
+                                                                    <a class="quantity-down" href="javascript:void(0)">-</a>
+                                                                    <input type="text" value="1" />
+                                                                    <a class="quantity-add" href="javascript:void(0)">+</a>
+                                                                </div>
+                                                                <div class="quantity-text">有货</div>
+                                                            </div>
+                                                            <div class="cell b-sum">
+                                                                <strong>13488.00</strong>
+                                                            </div>
+                                                            <div class="cell b-action">
+                                                                <a href="javascript:void(0)">删除</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="cart-floatbar">
+                                <div class="select-all">
+                                    <div class="cart-checkbox">
+                                        <input type="checkbox" checked="" name="" id="" class="allsel" value="" /> 全选
+                                    </div>
+                                </div>
+                                <div class="operation">
+                                    <a href="javascript:void(0)">删除选中的商品</a>
+                                </div>
+                                <div class="toolbar-right">
+                                    <div class="btn-area">
+                                        <a href=""></a>
+                                    </div>
+                                    <div class="price-sum">
+                                        <span class="txt">总价（不含运费）：</span>
+                                        <span class="totalprice">￥0.00</span>
+                                        <span class="txt">已节省：</span>
+                                        <span class="totalsave">-￥0.00</span>
+                                    </div>
+                                    <div class="amount-sum">
+                                        已选择
+                                        <em>0</em> 件商品
+                                        <b></b>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="main-b-box ">已经到底咯</div>
 
         </div>
     </div>
