--- a/src/index1.html
+++ b/src/index1.html
@@ -7,6 +7,7 @@
     <title>360商城</title>
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="fonts/iconfont.css">
+    <script src="https://cdn.bootcdn.net/ajax/libs/require.js/2.3.6/require.min.js" defer async=true data-main="script/main.js" id="currentpage" data-origin="index_module"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name=Keywords content="360商城,360商城,智能硬件,iot,360会员,商城,购物,红包,360,助手,优惠券,导购,直营,官方直营,电商,京东,360摄像机,360家庭防火墙,360手机助手,360浏览器,360金融,360手机卫士,路由器,360分期,行车助手,360音箱,360mall,mall360,360集团,360商城首页,360手机,奇酷手机,qikoo N7,奇酷N7,360手机官网,360购物官网,360商店,360拼拼,360会员,360用户,360官方商城,360官方商城官网,360旗舰店,360iot,360硬件,360智能,360智能硬件,360自营,360硬件自营,360会员优惠,360优惠券,360满减返,360安全,360家庭守护,360安全防护,360智能家,360防盗,360全方位">
     <meta name=Description content="360商城是奇虎360公司的官方电商平台，主要经营360安全智能设备，以及相关领域消费品。提供最新的360智能设备，最贴心的售后服务，360社区一手评测资讯，享受360安全、安心、放心的购物体验。">
@@ -44,9 +45,9 @@
                             </div>
                         </div>
                     </a>
-                    <a class="user-box-2" href="#"><span class="iconfont icon-baobao"></span>
+                    <a class="user-box-2" href="cart.html"><span class="iconfont icon-baobao"></span>
                     <div class="user-box-2-none">
-      您的购物车还没有商品，赶紧去选购吧！
+      点击进入购物车
                     </div></a>
 
                 </div>
@@ -82,9 +83,12 @@
                 <span class="iconfont icon-baobao"></span>
             </div>
             <div class="index-right-bottom">
-                <a href="#"> <span class="iconfont icon-leimupinleifenleileibie"></span></a>
+                <a href="#"> <span class="iconfont icon-leimupinleifenleileibie"></span>
+                </a>
                 <!-- 点击回到顶部 -->
-
+                <div class="index-right-bottom-pos">
+                    点击回到顶部
+                </div>
             </div>
         </div>
         <div class="header-content clear">
@@ -1145,6 +1149,3 @@
 </body>
 
 </html>
-<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
-<script src="script/index.js"></script>
