加了一个首页广告弹窗

--- a/src/index1.html
+++ b/src/index1.html
@@ -91,9 +91,15 @@
                 </div>
             </div>
         </div>
+        <!-- 首页广告弹窗 -->
+        <div class="t-banner">
+            <div class="t-banner-box">
+                <img src="https://p1.ssl.qhimg.com/t01e09cdf5517f31e4f.png" alt="">
+                <button class="t-banner-btn">X</button>
+            </div>
+        </div>
         <div class="header-content clear">
             <a class="header-logo-left">
-
                 <img src="https://p.ssl.qhimg.com/t0102789b8d00c3dfce.png" alt="">
             </a>
             <div class="header-box-left">
