--- a/src/detail.html
+++ b/src/detail.html
@@ -40,7 +40,7 @@
     <!-- 头部区 -->
     <div class="header" style="height: 100px;">
         <div class="header-content clear">
-            <a class="header-logo-left">
+            <a href="index1.html" class="header-logo-left">
                 <img src="https://p.ssl.qhimg.com/t0102789b8d00c3dfce.png" alt="">
             </a>
             <div class="header-box-left">
@@ -75,9 +75,9 @@
         <!-- main版心 -->
         <div class="main-content">
             <div class="goodsinfo clear">
-                <div class="box">
+                <!-- <div class="box">
                     <a href="cart.html" target="_blank">进入购物车</a>
-                </div>
+                </div> -->
                 <div class="wrap">
                     <div id="spic">
                         <img src="" alt="" id="smallpic">
@@ -101,10 +101,19 @@
                         <a class="loadtitle" href="##"></a>
                     </div>
                     <div class="p-price"><strong><em>￥</em><i class="loadpcp"></i></strong></div>
+                    <div class="p-box1 clear">
+                        <div class="p-box2">分类</div>
+                        <div class="p-box3">黑色</div>
+                        <div class="p-box4">蓝色</div>
+                    </div>
                     <div class="p-btn">
+                        <span class="p-btn-span"> 数量</span>
                         <input type="text" id="count" value="1" />
-                        <a href="cart.html">加入购物车</a>
                         <!-- void(0) -->
+                    </div>
+                    <div class="p-btn-shop">
+                        <a href="cart.html">加入购物车</a>
+
                     </div>
                 </div>
             </div>
