--- a/src/list.html
+++ b/src/list.html
@@ -7,7 +7,10 @@
     <title>360商城</title>
     <!-- <link rel="stylesheet" href="style/index.css"> -->
     <link rel="stylesheet" href="fonts/iconfont.css">
+    <link rel="stylesheet" href="fonts/iconfont2/iconfont.css">
+    <link rel="stylesheet" href="style/pagination.css">
     <link rel="stylesheet" href="style/list.css">
+
     <script src="https://cdn.bootcdn.net/ajax/libs/require.js/2.3.6/require.min.js" defer async=true data-main="script/main.js" id="currentpage" data-origin="list_module"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name=Keywords content="360商城,360商城,智能硬件,iot,360会员,商城,购物,红包,360,助手,优惠券,导购,直营,官方直营,电商,京东,360摄像机,360家庭防火墙,360手机助手,360浏览器,360金融,360手机卫士,路由器,360分期,行车助手,360音箱,360mall,mall360,360集团,360商城首页,360手机,奇酷手机,qikoo N7,奇酷N7,360手机官网,360购物官网,360商店,360拼拼,360会员,360用户,360官方商城,360官方商城官网,360旗舰店,360iot,360硬件,360智能,360智能硬件,360自营,360硬件自营,360会员优惠,360优惠券,360满减返,360安全,360家庭守护,360安全防护,360智能家,360防盗,360全方位">
@@ -34,14 +37,11 @@
             </div>
         </div>
     </div>
-    <main>
-        12
-    </main>
 
     <!-- 头部区 -->
     <div class="header" style="height: 100px;">
         <div class="header-content clear">
-            <a class="header-logo-left">
+            <a href="index1.html" class="header-logo-left">
                 <img src="https://p.ssl.qhimg.com/t0102789b8d00c3dfce.png" alt="">
             </a>
             <div class="header-box-left">
@@ -79,17 +79,25 @@
             <div class="main-b-list ">
                 <!-- 排序的按钮 -->
                 <div class="main-b-list-top">
-                    <button>默认排序</button>
-                    <button>升序排序</button>
-                    <button>降序排序</button>
+                    <button>默认</button>
+                    <button>价格
+                        <span class="iconfont icon-arrowTop"></span>
+                    </button>
+                    <button>价格
+                        <span class="iconfont icon-arrowBottom
+                        "></span>
+                    </button>
                 </div>
                 <ul class="main-b-list-ul clear">
 
                 </ul>
+                <div class="pagelis clear">
+                    <div class="m-style page">
+                    </div>
+                </div>
             </div>
-            <div class="main-b-box ">
 
-            </div>
+
 
         </div>
     </div>
