--- a/src/index1.html
+++ b/src/index1.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="header-content clear">
-            <a class="header-logo-left">
+            <a href="index1.html" class="header-logo-left">
                 <img src="https://p.ssl.qhimg.com/t0102789b8d00c3dfce.png" alt="">
             </a>
             <div class="header-box-left">
@@ -238,8 +238,8 @@
                 <li></li>
 
             </ol>
-            <a class="banner-lbtn" href="javascript:;">&lt;</a>
-            <a class="banner-rbtn" href="javascript:;">&gt;</a>
+            <a class="banner-lbtn" href="javascript:;"></a>
+            <a class="banner-rbtn" href="javascript:;"></a>
         </div>
     </div>
 
