--- a/src/login.html
+++ b/src/login.html
@@ -39,7 +39,7 @@
     <!-- 头部区 -->
     <div class="header" style="height: 100px;">
         <div class="header-content clear">
-            <a class="header-logo-left">
+            <a href="index1.html" class="header-logo-left">
                 <img src="https://p.ssl.qhimg.com/t0102789b8d00c3dfce.png" alt="">
             </a>
             <div class="header-box-left">
