--- a/src/detail.html
+++ b/src/detail.html
@@ -86,6 +86,7 @@
                     <div id="bf">
                         <img src="" alt="" id="bpic">
                     </div>
+                    <div id='bf_1'></div>
                     <div id="ulist">
                         <a href="javascript:;" id="left">&lt;</a>
                         <div id="list">
