--- a/src/login.html
+++ b/src/login.html
@@ -77,16 +77,16 @@
                 <div class="main-box-form">
                     <form action="" method="post">
                         <div class="main-form-input">
-                            <input type="text" name="username" placeholder="请输入用户名">
+                            <input id="username" type="text" name="username" placeholder="请输入用户名">
                         </div>
                         <div class="main-form-span">1</div>
 
                         <div class="main-form-input">
-                            <input type="password" name="password" placeholder="请输入密码">
+                            <input id="password" type="password" name="password" placeholder="请输入密码">
                         </div>
                         <div class="main-form-span">2</div>
                         <div class="main-form-input">
-                            <input class="main-form-submit" type="submit" value="登录">
+                            <input id="login" class="main-form-submit" type="submit" value="登录">
                         </div>
                         <div class="main-form-a"> <a class="main-form-a1" href="registry.html">快速注册</a>
                             <a class="main-form-a2" href="">找回密码</a></div>
