--- a/src/index1.html
+++ b/src/index1.html
@@ -32,8 +32,11 @@
             </div>
             <div class="top-user-box">
                 <div class="user-box">
-                    <a href="login.html" class="login">登录</a>
-                    <a href="registry.html" class="registered">注册</a>
+                    <a class="user-box-alogin login" href="login.html">登录</a>
+                    <a class="user-box-aregistry registered" href="registry.html">注册</a>
+
+                    <a class="user-box-aspan1" style="display:none;" href="#"></a>
+                    <a class="user-box-aspan2" style="display:none;" href="#">退出</a>
                     <a class="user-box-1" href="#">360手机商城
                         <div class="user-box-none clear">
                             <div class="user-box-none1">
