表单验证完成

--- a/src/login.html
+++ b/src/login.html
@@ -79,12 +79,12 @@
                         <div class="main-form-input">
                             <input id="username" type="text" name="username" placeholder="请输入用户名">
                         </div>
-                        <div class="main-form-span">1</div>
+                        <div class="main-form-span"></div>
 
                         <div class="main-form-input">
                             <input id="password" type="password" name="password" placeholder="请输入密码">
                         </div>
-                        <div class="main-form-span">2</div>
+                        <div class="main-form-span"></div>
                         <div class="main-form-input">
                             <input id="login" class="main-form-submit" type="submit" value="登录">
                         </div>
