--- a/src/registry.html
+++ b/src/registry.html
@@ -72,20 +72,20 @@
         <!-- main版心 -->
         <div class="main-content">
             <div class="main-box">
-                <div class="main-box-title">用户账号注册</div>
+                <div class="main-box-title">用户名注册</div>
                 <div class="main-box-form">
-                    <form action="" method="post">
+                    <form action="http://10.31.161.50/dashboard/360mall-porject/php/reg.php" method="post">
                         <div class="main-form-input">
-                            <input type="text" name="username" placeholder="请输入用户名">
+                            <input id="username" type="text" name="username" placeholder="请输入用户名">
                         </div>
-                        <div class="main-form-span">1</div>
+                        <div class="main-form-span"></div>
 
                         <div class="main-form-input">
-                            <input type="password" name="password" placeholder="请输入密码">
+                            <input id="password" type="password" name="password" placeholder="请输入密码">
                         </div>
-                        <div class="main-form-span">2</div>
+                        <div class="main-form-span"></div>
                         <div class="main-form-input">
-                            <input class="main-form-submit" type="submit" value="点击注册">
+                            <input class="main-form-submit" type="submit" name="submit" value="点击注册">
                         </div>
 
                     </form>
