购物车完成

--- a/src/cart.html
+++ b/src/cart.html
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="toolbar-right">
                                     <div class="btn-area">
-                                        <a href=""></a>
+                                        <a href="javascript:;">结算</a>
                                     </div>
                                     <div class="price-sum">
                                         <span class="txt">总价（不含运费）：</span>
