完成表单功能

--- a/src/cart.html
+++ b/src/cart.html
@@ -26,7 +26,7 @@
             </div>
             <div class="top-user-box">
                 <div class="user-box">
-                    <a href="login.html" class="login">登录</a>
+                    <a href="login.html">登录</a>
                     <a href="registry.html" class="registered">注册</a>
                     <a href="#">360手机商城</a>
                     <span class="iconfont icon-baobao"></span>
