--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="top-user-box">
                 <div class="user-box">
-                    <a class="user-box-alogin login" href="login.html">登录</a>
+                    <a class="user-box-alogin " href="login.html">登录</a>
                     <a class="user-box-aregistry registered" href="registry.html">注册</a>
 
                     <a class="user-box-aspan1" style="display:none;" href="#"></a>
@@ -980,7 +980,6 @@
                     <a href="">
                         <li>
  -->
-
 
                 </ul>
             </div>
