--- a/src/login.html
+++ b/src/login.html
@@ -26,7 +26,7 @@
             </div>
             <div class="top-user-box">
                 <div class="user-box">
-                    <a href="login.html" class="login">登录</a>
+                    <a href="login.html">登录</a>
                     <a href="registry.html" class="registered">注册</a>
                     <a href="#">360手机商城</a>
                     <span class="iconfont icon-baobao"></span>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="main-form-span"></div>
                         <div class="main-form-input">
-                            <input id="login" class="main-form-submit" type="submit" value="登录">
+                            <input id="login" class="main-form-submit" type="button" value="登录">
                         </div>
                         <div class="main-form-a"> <a class="main-form-a1" href="registry.html">快速注册</a>
                             <a class="main-form-a2" href="">找回密码</a></div>
