--- a/src/list.html
+++ b/src/list.html
@@ -29,8 +29,12 @@
             </div>
             <div class="top-user-box">
                 <div class="user-box">
-                    <a href="login.html">登录</a>
-                    <a href="registry.html" class="registered">注册</a>
+                    <a class="user-box-alogin " href="login.html">登录</a>
+                    <a class="user-box-aregistry registered" href="registry.html">注册</a>
+
+                    <a class="user-box-aspan1" style="display:none;" href="#"></a>
+                    <a class="user-box-aspan2" style="display:none;" href="#">退出</a>
+
                     <a href="#">360手机商城</a>
                     <span class="iconfont icon-baobao"></span>
                 </div>
